--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "node-sass": "^4.3.0",
+    "popper.js": "^1.16.1",
     "sass-loader": "^4.1.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
