--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^4.1.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
